--- a/src/main/static-content/wwwroot/graph.css
+++ b/src/main/static-content/wwwroot/graph.css
@@ -1,17 +1,3 @@
-/*
- * Copyright 2014 Amazon.com, Inc. or its affiliates. All Rights Reserved.
- *
- * Licensed under the Amazon Software License (the "License").
- * You may not use this file except in compliance with the License.
- * A copy of the License is located at
- *
- * http://aws.amazon.com/asl/
- *
- * or in the "license" file accompanying this file. This file is distributed
- * on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
- * express or implied. See the License for the specific language governing
- * permissions and limitations under the License.
- */
 
 #graph {
   width: 850px;
@@ -64,29 +50,29 @@
   height: 500px;
 }
 
-#updatedBy {
-  margin-left: auto;
-  margin-right: auto;
-  text-align: right;
-  font-size: 12px;
-  width: 1000px;
+#userDisplayed {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  width: 100%;
 }
 
-#topNContainer {
+#measurementContainer {
   text-align: center;
   font-size: 16px;
 }
 
-.topN {
+
+.measurement {
   margin-left: auto;
   margin-right: auto;
 }
 
-.referrerColumn {
+.measurementColumn {
   width: 250px;
 }
 
-.countColumn {
+.valueColumn {
   width: 40px;
   text-align: right;
 }
